Details
-
Bug
-
Resolution: Done
-
Not Evaluated
-
None
-
5.0.0
-
None
-
Qt5 on KDE, Gnome, Windows, and OS-X platforms.
-
I8c26404010f1e55164e25fe6a586d9795869c25f
Description
From the 'Interest' Mailing list: It would be helpful to add a StandardKey sequence which simplifies coding of a 'FullScreen' Toggle Shortcut, to handle the fact that the actual keyboard sequence is platform-dependent. (HIG documentation specifies different values in KDE, Gnome, Windows, and OS-X.)
Attachments
Issue Links
- replaces
-
QTBUG-20825 Add ToggleFullscreen to QKeySequence
-
- Closed
-